fixed avatar image:not showing

--- a/public/styles/post.css
+++ b/public/styles/post.css
@@ -22,3 +22,16 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.avatar-name {
+  display:flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.tweet-avatar {
+  width: 50px;
+  height: 50px;
+  margin-left: 3px;
+  margin-right:15px;
+}
